# Dashboard-Prueba

./: .gitignore  README.md  prueba.ipynb  pyproject.toml
data/processed/: clean_afluencia_metro.csv
data/raw/: raw_afluencia_metro.csv
notebooks/: exploracion_datos.ipynb
