[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dashboard-usd-mxn"
version = "0.1.0"
description = "Dashboard interactivo del tipo de cambio USD/MXN con FastAPI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"fastapi[standard]>=0.95.0",
]

[tool.setuptools]
py-modules = ["main"]


[project.optional-dependencies]
dev = [
	"pytest",
	"debugpy"
]

