[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dashboard"
version = "0.1.0"
description = "Dashboard interactivo con FastAPI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"ipykernel",
	"fastapi[standard]>=0.95.0",
	"requests",
	"pandas",
	"numpy",
]

[tool.setuptools]
py-modules = ["main"]


[project.optional-dependencies]
dev = [
	"pytest",
	"debugpy"
]